src: add double_dabble utility function

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,18 +1,23 @@
 CC=g++
-CFLAGS=-Wall -Wextra -Wpedantic -Weffc++ -std=c++17
+CFLAGS=-Wall -Wextra -Wpedantic -Weffc++ -std=c++17 -O2
 
 .PHONY: test clean
 
-test: test/test_apy_int
-	test/test_apy_int
+test: test/test_apy_util test/test_apy_fixed
+	test/test_apy_util
+	test/test_apy_fixed
 
-test/test_apy_int: util.h apy_int.h apy_int.cc test/test_apy_int.cc test/catch.o
-	${CC} ${CFLAGS} apy_int.cc test/test_apy_int.cc test/catch.o -o $@
+test/test_apy_util: apy_util.h test/test_apy_util.cc test/catch.o
+	${CC} ${CFLAGS} test/test_apy_util.cc test/catch.o -o $@
+
+test/test_apy_fixed: apy_util.h apy_fixed.h apy_fixed.cc test/test_apy_fixed.cc test/catch.o
+	${CC} ${CFLAGS} apy_fixed.cc test/test_apy_fixed.cc test/catch.o -o $@
+
 
 test/catch.o: test/catch.cc test/catch.hpp
 	${CC} ${CFLAGS} -c test/catch.cc -o test/catch.o
 
 clean:
 	@rm -rvf test/*.o
-	@rm -rvf test/test_apy_int
+	@rm -rvf test/test_apy_fixed
 
