Add start on floating-point

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('aPy-types', 'cpp', version : '0.0.1')
 
-lib_src = ['src/apy_fixed.cc']
+lib_src = ['src/apy_fixed.cc', 'src/apy_float.cc']
 
 # Python module incudes
 python_installation = import('python').find_installation('python3')
@@ -12,7 +12,7 @@ GNU_W_Flags = [
     '-Wdouble-promotion', '-Wsign-conversion', '-Wmisleading-indentation', '-Wduplicated-cond',
     '-Wduplicated-branches', '-Wlogical-op', '-fno-common', '-Wnull-dereference', '-Wuseless-cast',
     '-Wold-style-cast', '-Wredundant-decls', '-Wundef', '-Wno-unused', '-Wsuggest-final-types',
-    '-Wsuggest-override', '-Woverloaded-virtual', '-std=c++17'
+    '-Wsuggest-override', '-Woverloaded-virtual', '-std=c++17', '-g3'
 ]
 
 # aPy Types library
@@ -23,7 +23,7 @@ apy_lib = library('lib',
 
 # Python module
 python_installation.extension_module('apy_types', 
-    sources : ['src/apy_types_wrapper.cc', 'src/apy_fixed_wrapper.cc'],
+    sources : ['src/apy_types_wrapper.cc', 'src/apy_fixed_wrapper.cc', 'src/apy_float_wrapper.cc'],
     include_directories : pybind11_includes,
     dependencies : python_installation.dependency(),
     link_with : apy_lib
