src: add support for code coverage

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 CC=g++
-CFLAGS=													\
-	-Wall -Wextra -Wpedantic -Wno-depricated -Weffc++ 	\
+CFLAGS=																\
+	-Wall -Wextra -Wpedantic -Wno-depricated -Weffc++ 				\
 	-D _GLIBCXX_DEBUG -std=c++17 -O3 -march=native -g
 
-.PHONY: test test_profile clean
+.PHONY: test test_profile test_coverage clean clean_all
 
 TEST_SRC = 							\
 	test/test_apy_fixed.cc 			\
@@ -20,17 +20,28 @@ test_profile: test/test_apy_util test/test_apy_fixed
 	valgrind --tool=callgrind test/test_apy_util
 	valgrind --tool=callgrind test/test_apy_fixed
 
+test_coverage: test/test_apy_util test/test_apy_fixed
+	lcov --directory test --capture --output-file coverage.info
+	genhtml --demangle-cpp -o coverage coverage.info
+
 test/test_apy_util: apy_util.h test/test_apy_util.cc test/catch.o
-	${CC} ${CFLAGS} ${TEST_FLAGS} test/test_apy_util.cc test/catch.o -o $@
+	${CC} ${CFLAGS} ${TEST_FLAGS} --coverage test/test_apy_util.cc test/catch.o -o $@
 
 test/test_apy_fixed: apy_util.h apy_fixed.h apy_fixed.cc ${TEST_SRC} test/catch.o
-	${CC} ${CFLAGS} ${TEST_FLAGS} apy_fixed.cc ${TEST_SRC} test/catch.o -o $@
+	${CC} ${CFLAGS} ${TEST_FLAGS} --coverage apy_fixed.cc ${TEST_SRC} test/catch.o -o $@
 
 test/catch.o: test/catch.cc test/catch.hpp
 	${CC} ${CFLAGS} -c test/catch.cc -o test/catch.o
 
 clean:
-	@rm -rvf test/*.o
+	@rm -rvf test/*gcda
+	@rm -rvf test/*gcno
+	@rm -rvf test/*.gcov
 	@rm -rvf test/test_apy_fixed
 	@rm -rvf test/test_apy_util
 	@rm -rvf callgrind.out.*
+	@rm -rvf coverage/
+	@rm -rvf coverage.info
+
+clean_all: clean
+	@rm -rvf test/catch.o
