src: finish from_string_dec()

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ CFLAGS=								\
 TEST_SRC =				\
 	test/test_apy_fixed.cc		\
 	test/test_binary_operator.cc	\
-	test/test_to_string.cc
+	test/test_to_from_string.cc
 
 TEST_FLAGS=-D _IS_APY_TYPES_UNIT_TEST --coverage
 
