Initial version of floating-point multiplication, and some cleanup

--- a/test_apy_types/pytest.ini
+++ b/test_apy_types/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
 markers =
+    float_neg : custom marker for grouping tests for floating-point negation
     float_add : custom marker for grouping tests for floating-point addition
     float_sub : custom marker for grouping tests for floating-point subtraction
+    float_mul : custom marker for grouping tests for floating-point multiplication
