--- a/test_apy_types/pytest.ini
+++ b/test_apy_types/pytest.ini
@@ -4,3 +4,5 @@ markers =
     float_add : custom marker for grouping tests for floating-point addition
     float_sub : custom marker for grouping tests for floating-point subtraction
     float_mul : custom marker for grouping tests for floating-point multiplication
+    float_comp : custom marker for grouping tests for floating-point comparisons
+    float_special : custom marker for grouping tests for floating-point special values
