src: more fixes to fixed

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,12 @@
-CC=g++
-CFLAGS=								\
-	-Wall -Wextra -Wpedantic -Wno-depricated -Weffc++ 	\
- 	-std=c++17 -O2 -march=native -g
+#
+# vim: ts=8:colorcolumn=0
+# Makefile for running tests, profiling, and coverage generation for the APyTypes C++ component
+#
+
+CC = g++
+PYTHON3_FLAGS = $(shell python3-config --includes)
+WARNING_FLAGS = -Wall -Wextra -Wpedantic -Wno-depricated -Weffc++
+CXXFLAGS = ${WARNING_FLAGS} ${PYTHON3_FLAGS} -std=c++17 -O2 -march=native -g
 
 .PHONY: test test_profile test_coverage clean clean_all
 
@@ -25,13 +30,13 @@ test_coverage: test
 	genhtml --demangle-cpp -o coverage coverage.info
 
 test/test_apy_util: apy_util.h test/test_apy_util.cc test/catch.o
-	${CC} ${CFLAGS} ${TEST_FLAGS} test/test_apy_util.cc test/catch.o -o $@ -lgmp
+	${CC} ${CXXFLAGS} ${TEST_FLAGS} test/test_apy_util.cc test/catch.o -o $@ -lgmp
 
 test/test_apy_fixed: apy_util.h apy_fixed.h apy_fixed.cc ${TEST_SRC} test/catch.o
-	${CC} ${CFLAGS} ${TEST_FLAGS} apy_fixed.cc ${TEST_SRC} test/catch.o -o $@ -lgmp
+	${CC} ${CXXFLAGS} ${TEST_FLAGS} apy_fixed.cc ${TEST_SRC} test/catch.o -o $@ -lgmp
 
 test/catch.o: test/catch.cc test/catch.hpp
-	${CC} ${CFLAGS} -c test/catch.cc -o test/catch.o
+	${CC} ${CXXFLAGS} -c test/catch.cc -o test/catch.o
 
 #
 # Regular soft cleaning. Does not remove test/catch.o, as that object file takes such a
