--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,6 @@ classifiers = [
 #[project.urls]
 #Homepage = "https://github.com/pypa/sampleproject"
 #Issues = "https://github.com/pypa/sampleproject/issues"
+
+[tool.meson-python.args]
+setup = ['--default-library=static']
