--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@
 
 # Official language image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/python/tags/
-image: python:3.11.7
+image: python:3.10
 
 # Change pip's cache directory to be inside the project directory since we can
 # only cache local items.
@@ -20,13 +20,15 @@ cache:
 
 before_script:
   - apt-get update --yes
-  - apt-get install --yes python3-dev libgmp-dev
+  - apt-get install --yes pybind11-dev
   - python --version ; pip --version  # For debugging
 
 test:
   script:
-    - pip install ruff tox pytest # you can also use tox
+    - pip install pytest # you can also use tox
     - pip install .
     - pytest
+    - cd src
+    - make
 
 
