Test another path

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,4 +39,4 @@ test:
     reports:
       coverage_report:
         coverage_format: cobertura
-        path: build/coverage.xml
+        path: coverage.xml
