Filter out irrelevant coverage info

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,8 +40,7 @@ coverage:
     - pytest
     - cd src
     - make test_coverage
-    - lcov --rc lcov_branch_coverage=1 --output-file coverage.info \
-              --extract coverage.info $PWD/'*'
+    - lcov --rc lcov_branch_coverage=1 --output-file coverage.info --extract coverage.info $PWD/'*'
     - gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o ../coverage.xml --root ${CI_PROJECT_DIR}
   coverage: /^\s*lines:\s*\d+.\d+\%/
   artifacts:
