--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ build-backend = 'mesonpy'
 requires = ['meson-python', 'pybind11']
 
 [project]
-name = "apy_types"
+name = "apytypes"
 version = "0.0.1"
 authors = [
   { name="Example Author", email="author@example.com" }
